# SMM4H-HeaRD-2026-t6

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  INSTALL_CUDA.md  README.md  TUNING.md  pyproject.toml  submission_epoch7.csv
archive/: model_coral_v1.py
archive/baseline/: __init__.py  model.py  train.py
configs/: default.yaml
docker/: pyproject.toml
docs/: data_analysis.md  experiments.md
src/: bench_batch_size.py  constants.py  data_prep.py  dataset.py  eval_metrics.py  explain.py  model.py  predict.py  tnm_regex.py  train.py
src/data/: __init__.py  data_prep.py
src/models/: __init__.py  classifier.py
src/unsloth_medgemma/: constants.py  data_prep.py  eval_metrics.py  explain.py  model.py  predict.py  tnm_regex_analysis.py  train.py
tests/: conftest.py  test_coral.py  test_dataset.py  test_eval_metrics.py  test_label_mappings.py  test_model.py
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm3d.py  Conv2d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothGKDTrainer.py  UnslothKTOTrainer.py  UnslothORPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  unsloth_compiled_module_gemma3.py  unsloth_compiled_module_siglip.py
wandb/: latest-run
wandb/run-20260405_221756-8k1xpqp6/: run-8k1xpqp6.wandb
wandb/run-20260405_221756-8k1xpqp6/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260408_162433-ds88vzyt/files/: requirements.txt  wandb-metadata.json
