[project]
name = "tnm-staging"
version = "0.1.0"
description = "TNM staging classification from TCGA pathology reports"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "peft>=0.13.0",
    "scikit-learn>=1.2.0",
    "tqdm>=4.60.0",
    "wandb>=0.17.0",
    "gdown>=5.2.1",
    "vllm==0.12.0",
    "torchvision",
    "torchaudio",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
